fix(build): remove runtime flag from compiler args