@@ -32,9 +32,6 @@
                 <version>3.15.0</version>
                 <configuration>
                     <parameters>true</parameters>
-                    <compilerArgs>
-                        <arg>--enable-native-access=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
